--- a/video_app_js/index.html
+++ b/video_app_js/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pseudo Short-Form Video Platform</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     body, html {
       margin: 0;
@@ -77,11 +78,11 @@
 
   <!--Nav bar elements-->
   <div class="navbar">
-    <button id="homeButton">🏠<br></button>
-    <button id="searchButton">🔍<br></button>
-    <button id="addButton">➕<br></button>
-    <button id="notificationsButton">🔔<br></button>
-    <button id="profileButton">👤<br></button>
+    <button id="homeButton"><i class="fa-solid fa-house"></i><br></button>
+    <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i><br></button>
+    <button id="addButton"><i class="fa-solid fa-plus"></i><br></button>
+    <button id="notificationsButton"><i class="fa-solid fa-bell"></i><br></button>
+    <button id="profileButton"><i class="fa-solid fa-user"></i><br></button>
   </div>
 
   <script>
