--- a/AutoscrollingSFVP/index.html
+++ b/AutoscrollingSFVP/index.html
@@ -14,6 +14,23 @@
         background-color: #000;
     }
 
+    /* Intro screen */
+    .intro-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #000;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 24px;
+        text-align: center;
+        z-index: 2000;
+    }
+
     .video-container {
         height: 100vh;
         width: 100vw;
@@ -39,6 +56,7 @@
         overflow-y: scroll;
         height: 100vh;
         scroll-behavior: smooth;
+        display: none; /* Initially hidden */
     }
 
     /* Vertical nav bar */
@@ -101,6 +119,7 @@
         align-items: center;
         color: #fff;
         z-index: 1000;
+        display: none; /* Initially hidden */
     }
 
     .navbar button {
@@ -120,10 +139,17 @@
   </style>
 </head>
 <body>
+
+  <!-- Intro Screen -->
+  <div class="intro-screen" id="introScreen">
+    Follow the white dot with your eyes.
+  </div>
+
+  <!-- Videos Wrapper -->
   <div class="videos-wrapper" id="videosWrapper"></div>
-  
-  <!--nav bar elements -->
-  <div class="navbar">
+
+  <!-- Bottom Navbar -->
+  <div class="navbar" id="bottomNavbar">
     <button id="homeButton"><i class="fa-solid fa-house"></i><br></button>
     <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i><br></button>
     <button id="addButton"><i class="fa-solid fa-plus"></i><br></button>
@@ -139,6 +165,8 @@
     ];
 
     const videosWrapper = document.getElementById('videosWrapper');
+    const introScreen = document.getElementById('introScreen');
+    const bottomNavbar = document.getElementById('bottomNavbar');
 
     //Function to create a video container with video, nav bar, and text overlay
     function createVideoElement({ src, handle, description }) {
@@ -204,7 +232,14 @@
         videosWrapper.appendChild(videoElement);
     });
 
-    //Auto-scroll function
+    //Hide intro screen and show videos after 5 seconds
+    setTimeout(() => {
+        introScreen.style.display = 'none';
+        videosWrapper.style.display = 'block';
+        bottomNavbar.style.display = 'flex';
+    }, 5000);
+
+    //Auto-scroll functionality
     let currentIndex = 0;
     const videoContainers = document.querySelectorAll('.video-container');
 
@@ -213,25 +248,10 @@
         videoContainers[currentIndex].scrollIntoView({ behavior: 'smooth' });
     }
 
-    setInterval(autoScroll, 10000); //Auto-scroll every 10 seconds
+    setTimeout(() => {
+        setInterval(autoScroll, 10000);
+    }, 8000); //Start scrolling after intro
 
-    //Play, unmute, and pause videos based on visibility in scroll pattern
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            const video = entry.target.querySelector('video');
-            if (entry.isIntersecting) {
-                video.play();
-                video.muted = false; //Unmute video in view
-            } else {
-                video.pause();
-                video.muted = true; //Mute video out of view
-            }
-        });
-    }, { threshold: 0.75 });
-
-    videoContainers.forEach(container => {
-        observer.observe(container);
-    });
   </script>
 </body>
 </html>
